--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sattamattka",
   "version": "0.1.0",
-  "homepage": "https://raghavloya10.github.io/sattamattka",
+  "homepage": "https://sattamattka.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
