--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sattamattka",
   "version": "0.1.0",
-  "homepage": "http://sattamattka.com",
+  "homepage": "https://sattamattka.com",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
